Fix form width on mobile new place page

--- a/app/assets/stylesheets/new-place-form.css
+++ b/app/assets/stylesheets/new-place-form.css
@@ -36,22 +36,9 @@
   border-top: none;
 }
 
-/* #add-new-place-form {
-  margin: 0 1.25rem 3rem 1.25rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
+#add-new-place-form {
   width: calc(100vw - 80px);
-} */
-
-/* .add-new-place-form-group {
-  display: flex;
-  flex-direction: column;
-  gap: 0.125rem;
-  width: 100%;
-  max-width: 572px;
-} */
+}
 
 .sub-group {
   display: flex;
@@ -123,6 +110,11 @@
 }
 
 .social-wrapper {
+  & input {
+    border-radius: 0 5px 5px 0;
+    border-left: none;
+  }
+
   width: 100%;
   display: flex;
   flex-direction: row-reverse;
